<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!-- - - - - - - - - - - - - -->
    <!-- Used throughout Sunshine-->
    <!-- - - - - - - - - - - - - -->
    <string name="app_name">Sunshine</string>

    <!-- Menu -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_map">Open in Maps</string>
    <string name="menu_settings">Settings</string>

    <!-- Other messages -->
    <string name="error_message">An error occurred while fetching data</string>

    <!-- - - - - - - - - - - - - -->
    <!--Used by SunshineDateUtils-->
    <!-- - - - - - - - - - - - - -->
    <!-- For labelling today's forecast [CHAR LIMIT=15] -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>


    <!-- - - - - - - - - - - - - - - -->
    <!-- Used by SunshineWeatherUtils-->
    <!-- - - - - - - - - - - - - - - -->
    <!-- Temperature format in Celsius [CHAR LIMIT=5] -->
    <string name="format_temperature_celsius">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0C
    </string>
    <string name="format_temperature_fahrenheit">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0F
    </string>
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string>
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>
    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
    <!-- - - - - - - - - - - -->
    <!-- Used by NetworkUtils-->
    <!-- - - - - - - - - - - -->
    <!--NONE-->

    <!-- - - - - - - - - - - - - - - -->
    <!-- Used by OpenWeatherJsonUtils-->
    <!-- - - - - - - - - - - - - - - -->
    <!--NONE-->

    <!-- - - - - - - - - - - - - - -->
    <!--Used by SunshinePreferences-->
    <!-- - - - - - - - - - - - - - -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Mountain View, CA 94043</string>

    <!-- Temperature -->
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_celsius">Celsius</string>
    <string name="pref_units_label_fahrenheit">Fahrenheit</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_celsius" translatable="false">celsius</string>
    <string name="pref_units_fahrenheit" translatable="false">fahrenheit</string>

    <!-- Wind -->
    <string name="pref_speed_label">Speed Units</string>
    <string name="pref_speed_label_kilometers">Kilometers</string>
    <string name="pref_speed_label_miles">Miles</string>
    <string name="pref_speed_key" translatable="false">speed</string>
    <string name="pref_speed_kilometers" translatable="false">kilometers</string>
    <string name="pref_speed_miles" translatable="false">miles</string>
</resources>