<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Location -->
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"/>

    <!-- Temperature -->
    <ListPreference
        android:defaultValue="@string/pref_units_celsius"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"/>

    <!-- Wind -->
    <ListPreference
        android:defaultValue="@string/pref_speed_kilometers"
        android:entries="@array/pref_speed_options"
        android:entryValues="@array/pref_speed_values"
        android:key="@string/pref_speed_key"
        android:title="@string/pref_speed_label"/>
</PreferenceScreen>